                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.1.0

  *) TS-2245: cancel the trigger of CacheVC in openWriteCloseDataDone

  *) TS-2232: log level should be change from Status to Debug.
    Author: Yu Qing <zhuangyuan@taobao.com>

  *) [TS-2201] split drainIncomingChannel two thread, one handle Broadcast
   message and other handle Reliable(TCP) request for supporing large cluster.

  *) [TS-2144] Avoid race on e.g. "traffic_server -Cclear" which would crash
   the process intermittently.

  *) [TS-2217] remove the option to turn off body factory - setting it to 0
   will result in empty responses.

  *) [TS-2209] add support for lowercasing all substitutions in regex_remap.

  *) [TS-2187] failed assert `nr == sizeof(uint64_t)` in
   EventNotify::signal().

  *) [TS-2206] The trafficserver RC script does not use absolute path to
   traffic_line binary.

  *) [TS-2207] CentOS5 out of tree perl module build fails.

  *) [TS-1637] Fix nodes as idle/dead if we have not heard from them in
   awhile.

  *) [TS-2185] Support to control ClusterCom::sendSharedData frequency.

  *) [TS-2195] Deprecate experimental TSHttpTxnCacheLookupSkip API.

  *) [TS-2176] Do not reset value of api_skip_cache_lookup when reading it.
    Author: Corey Cossentino <corey@omniti.com>

  *) [TS-2191] Do not reschedule http_sm when the sm_list`s lock is not
   acquired. This can lose items for the WebUI, which will be fixed in a
   separate bug.

  *) [TS-2188] Fixes to make healthcheck plugin not segfault, and parse the
   log files properly. Author: Scott Harris <scott@harrisnet.id.au>.

  *) [TS-1086] Avoid edge case returning 304 to an unconditional request.
   Diagnosis and patch by Mohamad Khateeb.

  *) [TS-2168] Make RecordsConfig.cc more inline with default builds.

  *) [TS-2174] traffic_shell/traffic_line miss some stats value

  *) [TS-2173] RECD_COUNTER type is missing in setTokenValue().
