@@ -1,9 +1,11 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 4.1.0
 
-  *) TS-2245: cancel the trigger of CacheVC in openWriteCloseDataDone
+  *) [TS-2255] TS should not flood printing after log space reach the limit.
 
-  *) TS-2232: log level should be change from Status to Debug.
+  *) [TS-2245] cancel the trigger of CacheVC in openWriteCloseDataDone.
+
+  *) [TS-2232] log level should be change from Status to Debug.
     Author: Yu Qing <zhuangyuan@taobao.com>
 
   *) [TS-2201] split drainIncomingChannel two thread, one handle Broadcast
